syntax = "proto3";

package scheduler.tasks;

import weak "gogoproto/gogo.proto";
import "api/utils/empty.proto";

option go_package = "github.com/silverswords/scheduler/api/worker";

service Worker {
    rpc DeliverTask(DeliverRequest) returns (scheduler.utils.Empty);
    rpc CancelTask(CancelRequest) returns (scheduler.utils.Empty);
}

message DeliverRequest {
    string name = 1 [(gogoproto.nullable) = false];
}

message CancelRequest {
    string name = 1 [(gogoproto.nullable) = false];
}